kubernetes_manifest_file/deployment_flaskapp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: makar007/flask:001
        imagePullPolicy: Always        
        ports:
        - containerPort: 5002
      volumes:
      - name: flask-data
        persistentVolumeClaim:
          claimName: flask-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: flask-ingress-service
spec:
  type: NodePort
  selector:
    app: flask
  ports:
  - port: 8080
    targetPort: 5002
    nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-lb
spec:
  type: LoadBalancer
  selector:
    app: flask
  ports:
  - port: 5002
    targetPort: 5002
